--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile project(':a_module')
+    compile project(':b_module')
+    compile project(':c_module')
+    compile project(':lib')
 }
