--- a/c_module/src/main/AndroidManifest.xml
+++ b/c_module/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 
-    package="test.amodule">
+    package="jin.test.c_module">
 
     <application android:allowBackup="true" android:label="@string/app_name"
         android:supportsRtl="true">
