--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,10 @@ android {
                 arguments = [ moduleName : project.getName() ]
             }
         }
+        
+        lintOptions {
+            disable "ResourceType"
+        }
     }
     buildTypes {
         release {
